# amazon-sagemaker-catalog-mcp-server

./: .gitignore  README.md  pyproject.toml
.kiro/settings/: mcp.json
.kiro/specs/sagemaker-catalog-mcp-server/: design.md  requirements.md  tasks.md
src/sagemaker_catalog_mcp_server/: __init__.py  __main__.py  executor.py  generator.py  models.py  parser.py  server.py
src/sagemaker_catalog_mcp_server/utils/: __init__.py  name_converter.py  type_converter.py
tests/: conftest.py  test_name_converter.py  test_server.py  test_service_model_parser.py  test_tool_executor.py  test_tool_generator.py  test_type_converter.py
